--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-	"name": "timer",
-	"version": "0.0.1",
-	"private": true,
-	"devDependencies": {
-		"grunt": "^0.4.5",
-		"grunt-contrib-cssmin": "^0.10.0",
-		"grunt-contrib-sass": "^0.7.4",
-		"grunt-contrib-uglify": "^0.5.1",
-		"grunt-contrib-watch": "^0.6.1",
-		"grunt-includes": "^0.5.1"
-	}
+  "name": "timer",
+  "version": "0.0.1",
+  "private": true,
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-sass": "^0.7.4",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-includes": "^0.5.1",
+    "grunt-responsive-images": "^0.1.6"
+  }
 }
