--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-sass": "^0.7.4",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-imagine": "^0.3.54",
     "grunt-includes": "^0.5.1",
     "grunt-responsive-images": "^0.1.6"
   }
